--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
             <img src="./images/top-left.png" alt="">
         </div>
     </section>
+    <section class="about-section">
+        <div id="about-image" class="half-width about-person">
+            <img src="./images/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1 class="about-me">About Me</h1>
+            <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam ab labore corporis
+                accusamus dicta, amet
+                dolores deserunt cumque quasi? Sed rem maiores reprehenderit in doloribus dolorem nisi, excepturi enim
+                ex harum aliquid ut nam voluptas non expedita earum quidem. Assumenda odit doloribus architecto amet
+                quod suscipit voluptas, molestias autem hic?</p>
+            <a href="#" class="link-btn">Contact Me</a>
+        </div>
+    </section>
 </body>
 
 </html>
