--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
             <a href="#" class="link-btn">Contact Me</a>
         </div>
     </section>
+    <section class="my-recipies">
+        <h1 class="reci-head">My Recipies</h1>
+        <p class="reci-descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat minus velit
+            aperiam facilis, quia
+            vitae fuga quas dignissimos perspiciatis, officiis, voluptatum perferendis earum ex? In quasi tenetur
+            voluptatem incidunt.</p>
+        <div class="half-width" id="recipies">
+            <img class="reci-image" src="./images/food/Project Cover.jpg" alt="">
+            <h3 class="sub-title">Recipie Title</h3>
+            <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos ab in animi
+                odio consequuntur
+                aperiam rerum, impedit eveniet libero quas.</p>
+        </div>
+        <div class="half-width" id="recipies">
+            <img class="reci-image" src="./images/food/Project Cover.jpg" alt="">
+            <h3 class="sub-title">Recipie Title</h3>
+            <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos ab in animi
+                odio consequuntur
+                aperiam rerum, impedit eveniet libero quas.</p>
+
+        </div>
+    </section>
 </body>
 
 </html>
