--- a/index.html
+++ b/index.html
@@ -62,6 +62,27 @@
 
         </div>
     </section>
+    <div>
+        <div class="follow-us">
+            <div class="yt-insta-dribble">
+                <h1>700K</h1>
+                <h3>Youtube Subscribers</h3>
+            </div>
+            <div class="yt-insta-dribble">
+                <h1>2.4m</h1>
+                <h3>Instagram Followers</h3>
+            </div>
+            <div class="yt-insta-dribble">
+                <h1>100K</h1>
+                <h3>Dribbble Shot Likes</h3>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <h1><span class="orange-color">Eat</span> Fresh</h1>
+        <h3>Eat healthy to live healthy. Live healthy to live happy.</h3>
+    </footer>
 </body>
 
 </html>
